--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,16 @@
 
   <body class="overflow-x-hidden">
     <header>
+        <section class="bg-slate-950 py-2">
+            <ul
+            class="text-white flex w-1/2 justify-end gap-5 items-center font-vazir"  >
+            <li>
+              <a
+                class="bg-login-user-color py-1 px-3 rounded /// hover:bg-login-user-color-hover duration-200"
+                href="#">ثبت نام</a>
+            </li>
+            <li><a class="text-lg" href="#">ورود</a></li>
+          </ul></section>
       <!-- Header & Hero Section -->
       <section
         class="bg-[url('../img/bg2.jpg')] bg-fixed bg-no-repeat object-cover h-[78vh] pt-2 rounded-br-[50px] rounded-bl-[50px]"
@@ -34,19 +44,6 @@
               <button class="hamburger md:hidden mr-6">
                 <div class="bar"></div>
               </button>
-              <ul
-                class="text-white flex w-1/2 justify-end mr-4 pr-3 gap-5 items-center font-vazir border-r"
-              >
-                <li>
-                  <a
-                    class="bg-login-user-color py-1 px-3 rounded /// hover:bg-login-user-color-hover duration-200"
-                    href="#"
-                    >ثبت نام</a
-                  >
-                </li>
-
-                <li><a class="text-lg" href="#">ورود</a></li>
-              </ul>
               <!-- Site Logo -->
               <div class="flex items-center">
                 <a
@@ -956,15 +953,6 @@
             </div>
           </div>
         </div>
-
-        <!-- Circle for Design -->
-        <div
-          class="size-[600px] bg-slate-200 rounded-full /// absolute top-20 -left-44 -z-10 animate-pulse"
-        ></div>
-        <!--  -->
-        <div
-          class="size-[400px] bg-slate-200 rounded-full /// absolute bottom-20 -right-44 -z-10 animate-pulse"
-        ></div>
       </section>
     </main>
 
