--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <header>
         <section class="bg-slate-950 py-2">
             <ul
-            class="text-white flex w-1/2 justify-end gap-5 items-center font-vazir"  >
+            class="text-white flex justify-center gap-5 items-center font-vazir"  >
             <li>
               <a
                 class="bg-login-user-color py-1 px-3 rounded /// hover:bg-login-user-color-hover duration-200"
@@ -47,7 +47,7 @@
               <!-- Site Logo -->
               <div class="flex items-center">
                 <a
-                  class="text-white font-iran-sans font-bold text-3xl md:whitespace-nowrap whitespace-normal"
+                  class="text-white font-iran-sans font-bold text-2xl md:text-3xl md:whitespace-nowrap whitespace-normal"
                   href="#"
                   >شهرداری محمد شهر</a
                 >
